@@ -14,6 +14,28 @@
     <a href="dev-news.html">dev news</a>
     <a href="about.html">about</a>
     <h1>Development News!</h1>
+    <h3 class="static">
+      4/8/19
+    </h3>
+    <p>
+      Some more development today! A little news!
+      <ul>
+        <li>The game over notice now disappears when you start a new level!</li>
+        <li>Fixed a bug where the game was calculating the score as many times as there were squares matched - giving you triple or more the score you earned! Scoring is now considerably less generous</li>
+        <li>The project is now on <a href="https://github.com/LeanderMcL/sunset-weaver">Github!</a></li>
+    </ul>
+    Next up:
+    <ul>
+      <li>Responsive text sizing, so the game looks right on various screen sizes</li>
+    </ul>
+    And after that:
+    <ul>
+      <li>Setting the size of images on the buttons according to the screen size, so the game looks better on different screen sizes</li>
+      <li>Some prettification of the scoreboard so it looks the way I want</li>
+      <li>A refactor to make the code run a bit more efficiently</li>
+      <li>Another refactor to prepare me for being able to generate different levels</li>
+    </ul>
+    </p>
       <h3 class="static">3/8/19</h3>
     <p>
       It's been a hellish year, but I'm finally back.
